# Earnings-Trustability

./: .env.example  .gitignore  HOW_IT_WORKS.md  LICENSE  README.md  pyproject.toml
scripts/: run_backtest.py  seed_backlog.py
src/guidance_credibility/: __init__.py  cli.py  config.py  db.py  fetcher.py  models.py  pipeline.py
src/guidance_credibility/agents/: __init__.py  extractor.py  scorer.py  sentiment.py  verifier.py
